--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "twitter-stream-to-firebase",
+  "name": "twitter-stream-cli",
   "version": "0.0.1",
   "description": "cli tool to send twitter streams to firebase",
   "main": "index.js",
   "bin": {
-    "twitter-stream-to-firebase": "./bin/twitter-stream-to-firebase.js"
+    "twitter-stream-cli": "./bin/twitter-stream-cli.js"
   },
   "scripts": {
     "test": "gulp test",
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/saitodisse/twitter-stream-to-firebase.git"
+    "url": "git+https://github.com/saitodisse/twitter-stream-cli.git"
   },
   "keywords": [
     "cli tool"
@@ -21,9 +21,9 @@
   "author": "Julio Makdisse Saito",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/saitodisse/twitter-stream-to-firebase/issues"
+    "url": "https://github.com/saitodisse/twitter-stream-cli/issues"
   },
-  "homepage": "https://github.com/saitodisse/twitter-stream-to-firebase",
+  "homepage": "https://github.com/saitodisse/twitter-stream-cli",
   "devDependencies": {
     "azk-dev": "^0.3.0",
     "babel-eslint": "^4.1.8",
