[Docs] Wget suggestion

--- a/.env-example
+++ b/.env-example
@@ -1,5 +1,8 @@
+# Twitter API keys: https://apps.twitter.com
 CONSUMER_KEY=__XXX__
 CONSUMER_SECRET=__XXX__
 TOKEN=__XXX__
 TOKEN_SECRET=__XXX__
+
+# [optional] Firebase URL: https://www.firebase.com/account
 FIREBASE_URL=https://__XXX__.firebaseio.com
