--- a/.env-example
+++ b/.env-example
@@ -4,5 +4,6 @@ CONSUMER_SECRET=__XXX__
 TOKEN=__XXX__
 TOKEN_SECRET=__XXX__
 
-# [optional] Firebase URL: https://www.firebase.com/account
-FIREBASE_URL=https://__XXX__.firebaseio.com
+# [optional] Firebase: https://console.firebase.google.com
+FIREBASE_APIKEY=__XXX__
+FIREBASE_DATABASEURL=__XXX__
